fix(comment): correct domain event access method in tests
- 테스트에서 domain event 접근 시 잘못된 메서드 호출 수정
  `getFirst()` 대신 `get(0)` 사용으로 IndexOutOfBoundsException 방지
- 변경된 메서드는 `CommentUpdated`, `CommentDeleted`, `CommentHidden`에
  대한 이벤트 검증 테스트에 영향을 미침
- 코드의 안정성을 보장하기 위해 올바른 컬렉션 접근 방식 채택